<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.patane.riccardo.inventory.DetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:src="@drawable/ic_add_white_24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/product_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="36dp" />

        <LinearLayout
            android:id="@+id/quantity_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/detail_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:hint="0"
                android:inputType="number"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/pcs"
                android:textSize="24sp" />

            

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="@string/dollar"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/detail_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="left"
                android:hint="0.00"
                android:inputType="numberDecimal"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_price"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order" />

            <View
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sell" />

            <View
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_buttons"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/detail_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
